--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "server.js",
   "dependencies": {
+    "@supabase/supabase-js": "^2.78.0",
     "accepts": "^2.0.0",
     "anymatch": "^3.1.3",
     "balanced-match": "^1.0.2",
@@ -107,7 +108,6 @@
     "vary": "^1.1.2",
     "wrappy": "^1.0.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
